RESOLVED FIXED98969
[texmap] logic error in BitmapTextureGL::updateContents
https://bugs.webkit.org/show_bug.cgi?id=98969
Summary [texmap] logic error in BitmapTextureGL::updateContents
arno.
Reported 2012-10-10 16:53:38 PDT
Hi, in bug #91897, if (bytesPerLine == targetRect.width() * bytesPerPixel has been replaced by if (bytesPerLine == targetRect.width() / 4 (multiplication => division) So, the "fast path" is never used anymore
Attachments
Patch (2.01 KB, patch)
2012-10-10 17:00 PDT, arno.
no flags
Patch (2.02 KB, patch)
2012-10-10 17:04 PDT, arno.
no flags
arno.
Comment 1 2012-10-10 17:00:01 PDT
Created attachment 168098 [details] Patch patch proposal
WebKit Review Bot
Comment 2 2012-10-10 17:02:03 PDT
Attachment 168098 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
arno.
Comment 3 2012-10-10 17:04:29 PDT
Created attachment 168101 [details] Patch amended patch
WebKit Review Bot
Comment 4 2012-10-10 21:57:56 PDT
Comment on attachment 168101 [details] Patch Rejecting attachment 168101 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: e-webkit line 164. Failed to run "['Tools/Scripts/update-webkit', '--chromium', '--force-update']" exit_code: 9 BlackBerry] Fix assertion in NetworkJob::notifyChallengeResult. When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 164. Full output: http://queues.webkit.org/results/14257387
arno.
Comment 5 2012-10-11 09:55:46 PDT
(In reply to comment #4) > (From update of attachment 168101 [details]) > Rejecting attachment 168101 [details] from commit-queue. > > Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 > > Last 500 characters of output: > e-webkit line 164. > > Failed to run "['Tools/Scripts/update-webkit', '--chromium', '--force-update']" exit_code: 9 > BlackBerry] Fix assertion in NetworkJob::notifyChallengeResult. > > When you have resolved this problem run "git rebase --continue". > If you would prefer to skip this patch, instead run "git rebase --skip". > To restore the original branch and stop rebasing run "git rebase --abort". > > rebase refs/remotes/origin/master: command returned error: 1 > > Died at Tools/Scripts/update-webkit line 164. > > Full output: http://queues.webkit.org/results/14257387 I don't really understand why the patch could not be applied
Jocelyn Turcotte
Comment 6 2012-10-11 10:23:19 PDT
Comment on attachment 168101 [details] Patch Not sure either, the error seems unrelated. Trying again.
WebKit Review Bot
Comment 7 2012-10-11 10:28:01 PDT
Comment on attachment 168101 [details] Patch Clearing flags on attachment: 168101 Committed r131078: <http://trac.webkit.org/changeset/131078>
WebKit Review Bot
Comment 8 2012-10-11 10:28:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.