[texmap] logic error in BitmapTextureGL::updateContents https://bugs.webkit.org/show_bug.cgi?id=98969

Patch by Arnaud Renevier <a.renevier@sisa.samsung.com> on 2012-10-11
Reviewed by Noam Rosenthal.

Incorrect test (bytesPerLine == targetRect.width() / 4) never
evaluates to true. Change it to correct test
(bytesPerLine == targetRect.width() * 4)

No new tests because no functional change.

* platform/graphics/texmap/TextureMapperGL.cpp:
(WebCore::BitmapTextureGL::updateContents):

Canonical link: https://commits.webkit.org/117048@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131078 268f45cc-cd09-0410-ab3c-d52691b4dbfc